--- a/clusters/prodpublick8s.yaml
+++ b/clusters/prodpublick8s.yaml
@@ -187,28 +187,24 @@ releases:
       - "../config/mirrorbits.yaml"
     secrets:
       - "../secrets/config/mirrorbits/secrets.yaml"
-#  - name: default-release-jenkins
-#    namespace: release
-#    chart: jenkins/jenkins
-#    version: 3.11.3
-#    timeout: 600
-#    set:
-#      - name: namespace
-#        value: release
-#    values:
-#    - ../config/ext_jenkins-release.yaml
-  - name: jenkins-infra-additional
+  - name: default-release-jenkins
     namespace: release
-    chart: jenkins-infra/jenkins-additional
-    version: 0.0.3
+    chart: jenkins/jenkins
+    version: 3.11.3
+    timeout: 600
+    set:
+      - name: namespace
+        value: release
+    values:
+      - ../config/ext_jenkins-release.yaml
     secrets:
-      - "../secrets/config/release/jenkins/secrets.yaml"
+      - "../secrets/config/release.ci.jenkins.io/jenkins-secrets.yaml"
   - name: default-release-jenkins-env
     namespace: release
     chart: jenkins-infra/env-jenkins-release
     version: 0.1.1
     secrets:
-      - ../secrets/config/release/env-jenkins/secrets.yaml
+      - ../secrets/config/release.ci.jenkins.io/env-jenkins-secrets.yaml
   - name: custom-distribution-service
     namespace: custom-distribution-service
     chart: jenkins-infra/custom-distribution-service
