--- a/config/ext_jenkins-infra.yaml
+++ b/config/ext_jenkins-infra.yaml
@@ -326,7 +326,7 @@ controller:
                 sshKeysCredentialsId: "ec2-agents-privkey"
                 useInstanceProfileForCredentials: false
                 templates:
-                - ami: "ami-07096113cf2ec6768" # https://github.com/jenkins-infra/packer-images/
+                - ami: "ami-0320d578c21e1255c" # https://github.com/jenkins-infra/packer-images/  LINUXAMD64  DO NOT DELETE OR EDIT THIS COMMENT USED BY UPDATECLI
                   amiOwners: "200564066411"
                   amiType:
                     unixData:
@@ -362,7 +362,7 @@ controller:
                     value: "infra.ci.jenkins.io"
                   type: T3Medium
                   useEphemeralDevices: true
-                - ami: "ami-0d2d7ce8555684cbb" # https://github.com/jenkins-infra/packer-images/
+                - ami: "ami-0d2d7ce8555684cbb" # https://github.com/jenkins-infra/packer-images/ LINUXARM64  DO NOT DELETE OR EDIT THIS COMMENT USED BY UPDATECLI
                   amiOwners: "200564066411"
                   amiType:
                     unixData:
@@ -398,7 +398,7 @@ controller:
                     value: "infra.ci.jenkins.io"
                   type: T4gMedium
                   useEphemeralDevices: true
-                - ami: "ami-0c3f1d709a2270b04" # https://github.com/jenkins-infra/packer-images/
+                - ami: "ami-0c3f1d709a2270b04" # https://github.com/jenkins-infra/packer-images/ WINDOWSAMD64  DO NOT DELETE OR EDIT THIS COMMENT USED BY UPDATECLI
                   amiOwners: "200564066411"
                   amiType:
                     unixData:
