--- a/updatecli/updatecli.d/charts/jenkins-agents-infra-release.yaml
+++ b/updatecli/updatecli.d/charts/jenkins-agents-infra-release.yaml
@@ -69,8 +69,8 @@ targets:
     sourceID: getLatestUbuntuAgentAMIAmd64
     spec:
       file: config/ext_jenkins-infra.yaml
-      matchPattern: '- ami: ".*"((.|\n)*)description: "AMD64 Ubuntu 20.04"'
-      replacePattern: '- ami: "{{ source `getLatestUbuntuAgentAMIAmd64` }}"${1}description: "AMD64 Ubuntu 20.04"'
+      matchPattern: '- ami: ".*"(.*)LINUXAMD64'
+      replacePattern: '- ami: "{{ source `getLatestUbuntuAgentAMIAmd64` }}"${1}LINUXAMD64'
     scmID: default
   setUbuntuAgentAMIArm64:
     name: "Bump AMI ID for ARM 64"
@@ -78,8 +78,8 @@ targets:
     sourceID: getLatestUbuntuAgentAMIArm64
     spec:
       file: config/ext_jenkins-infra.yaml
-      matchPattern: '- ami: ".*"((.|\n)*)description: "ARM64 Ubuntu 20.04"'
-      replacePattern: '- ami: "{{ source `getLatestUbuntuAgentAMIArm64` }}"${1}description: "ARM64 Ubuntu 20.04"'
+      matchPattern: '- ami: ".*"(.*)LINUXARM64'
+      replacePattern: '- ami: "{{ source `getLatestUbuntuAgentAMIArm64` }}"${1}LINUXARM64'
     scmID: default
   setWindowsAgentAMIamd64:
     name: "Bump AMI ID for Windows AMD 64"
@@ -87,8 +87,8 @@ targets:
     sourceID: getLatestWindowsAgentAMIAmd64
     spec:
       file: config/ext_jenkins-infra.yaml
-      matchPattern: '- ami: ".*"((.|\n)*)description: "Windows 2019 AMD64"'
-      replacePattern: '- ami: "{{ source `getLatestWindowsAgentAMIAmd64` }}"${1}description: "Windows 2019 AMD64"'
+      matchPattern: '- ami: ".*"(.*)WINDOWSAMD64'
+      replacePattern: '- ami: "{{ source `getLatestWindowsAgentAMIAmd64` }}"${1}WINDOWSAMD64'
     scmID: default
 
 pullrequests:
@@ -99,4 +99,3 @@ pullrequests:
       - setUbuntuAgentAMIAmd64
       - setUbuntuAgentAMIArm64
       - setWindowsAgentAMIamd64
- 
