--- a/clusters/prodpublick8s.yaml
+++ b/clusters/prodpublick8s.yaml
@@ -187,18 +187,18 @@ releases:
       - "../config/mirrorbits.yaml"
     secrets:
       - "../secrets/config/mirrorbits/secrets.yaml"
-  - name: default-release-jenkins
-    namespace: release
-    chart: jenkins/jenkins
-    version: 3.11.4
-    timeout: 600
-    set:
-      - name: namespace
-        value: release
-    values:
-      - ../config/ext_jenkins-release.yaml
-    secrets:
-      - "../secrets/config/release.ci.jenkins.io/jenkins-secrets.yaml"
+  # - name: default-release-jenkins
+  #   namespace: release
+  #   chart: jenkins/jenkins
+  #   version: 3.11.4
+  #   timeout: 600
+  #   set:
+  #     - name: namespace
+  #       value: release
+  #   values:
+  #     - ../config/ext_jenkins-release.yaml
+  #   secrets:
+  #     - "../secrets/config/release.ci.jenkins.io/jenkins-secrets.yaml"
   - name: default-release-jenkins-env
     namespace: release
     chart: jenkins-infra/env-jenkins-release
