--- a/updatecli/updatecli.d/charts/jenkins.yaml
+++ b/updatecli/updatecli.d/charts/jenkins.yaml
@@ -20,14 +20,14 @@ sources:
       name: jenkins
 
 targets:
-  updateReleaseCIChartVersion:
-    name: "jenkinsci/jenkins Helm Chart"
-    kind: file
-    spec:
-      file: clusters/prodpublick8s.yaml
-      matchPattern: 'chart: jenkins\/jenkins((\r\n|\r|\n)(\s+))version: .*'
-      replacePattern: 'chart: jenkins/jenkins${1}version: {{ source `lastChartVersion` }}'
-    scmID: default
+  # updateReleaseCIChartVersion:
+  #   name: "jenkinsci/jenkins Helm Chart"
+  #   kind: file
+  #   spec:
+  #     file: clusters/prodpublick8s.yaml
+  #     matchPattern: 'chart: jenkins\/jenkins((\r\n|\r|\n)(\s+))version: .*'
+  #     replacePattern: 'chart: jenkins/jenkins${1}version: {{ source `lastChartVersion` }}'
+  #   scmID: default
   updateInfraCIChartVersion:
     name: "jenkinsci/jenkins Helm Chart"
     kind: file
@@ -42,7 +42,7 @@ pullrequests:
     kind: github
     scmID: default
     targets:
-      - updateReleaseCIChartVersion
+      # - updateReleaseCIChartVersion
       - updateInfraCIChartVersion
     spec:
       labels:
