--- a/updatecli/updatecli.d/charts/jenkins-kubernetes-agent.yaml
+++ b/updatecli/updatecli.d/charts/jenkins-kubernetes-agent.yaml
@@ -20,11 +20,19 @@ sources:
       name: jenkins-kubernetes-agents
 
 targets:
-  updateChartVersion:
+  updateCik8sChartVersion:
     name: "Update the chart version for jenkins kubernetes agent"
     kind: file
     spec:
       file: clusters/cik8s.yaml
+      matchPattern: 'chart: jenkins-infra\/jenkins-kubernetes-agents((\r\n|\r|\n)(\s+))version: .*'
+      replacePattern: 'chart: jenkins-infra/jenkins-kubernetes-agents${1}version: {{ source `lastChartVersion` }}'
+    scmID: default
+  updateDoksChartVersion:
+    name: "Update the chart version for jenkins kubernetes agent"
+    kind: file
+    spec:
+      file: clusters/doks.yaml
       matchPattern: 'chart: jenkins-infra\/jenkins-kubernetes-agents((\r\n|\r|\n)(\s+))version: .*'
       replacePattern: 'chart: jenkins-infra/jenkins-kubernetes-agents${1}version: {{ source `lastChartVersion` }}'
     scmID: default
