fix: add targets to pullrequests section

--- a/updatecli/updatecli.d/charts/jenkins-kubernetes-agent.yaml
+++ b/updatecli/updatecli.d/charts/jenkins-kubernetes-agent.yaml
@@ -42,7 +42,8 @@ pullrequests:
     kind: github
     scmID: default
     targets:
-      - updateChartVersion
+      - updateCik8sChartVersion
+      - updateDoksChartVersion
     spec:
       labels:
         - dependencies
