debug: comment out updatecli for now

--- a/updatecli/updatecli.d/charts/jenkins-kubernetes-agent.yaml
+++ b/updatecli/updatecli.d/charts/jenkins-kubernetes-agent.yaml
@@ -28,14 +28,14 @@ targets:
       matchPattern: 'chart: jenkins-infra\/jenkins-kubernetes-agents((\r\n|\r|\n)(\s+))version: .*'
       replacePattern: 'chart: jenkins-infra/jenkins-kubernetes-agents${1}version: {{ source `lastChartVersion` }}'
     scmID: default
-  updateDoksChartVersion:
-    name: "Update the chart version for jenkins kubernetes agent"
-    kind: file
-    spec:
-      file: clusters/doks.yaml
-      matchPattern: 'chart: jenkins-infra\/jenkins-kubernetes-agents((\r\n|\r|\n)(\s+))version: .*'
-      replacePattern: 'chart: jenkins-infra/jenkins-kubernetes-agents${1}version: {{ source `lastChartVersion` }}'
-    scmID: default
+  # updateDoksChartVersion:
+  #   name: "Update the chart version for jenkins kubernetes agent"
+  #   kind: file
+  #   spec:
+  #     file: clusters/doks.yaml
+  #     matchPattern: 'chart: jenkins-infra\/jenkins-kubernetes-agents((\r\n|\r|\n)(\s+))version: .*'
+  #     replacePattern: 'chart: jenkins-infra/jenkins-kubernetes-agents${1}version: {{ source `lastChartVersion` }}'
+  #   scmID: default
 
 pullrequests:
   default:
@@ -43,7 +43,7 @@ pullrequests:
     scmID: default
     targets:
       - updateCik8sChartVersion
-      - updateDoksChartVersion
+      # - updateDoksChartVersion
     spec:
       labels:
         - dependencies
