--- a/config/ext_jenkins-infra.yaml
+++ b/config/ext_jenkins-infra.yaml
@@ -185,6 +185,12 @@ controller:
                     secretBytes: "${base64:${KUBECONFIG_CIK8S}}"
                 - file:
                     fileName: "kubeconfig"
+                    id: "kubeconfig-doks"
+                    description: "Kubeconfig file for doks"
+                    scope: GLOBAL
+                    secretBytes: "${base64:${KUBECONFIG_DOKS}}"
+                - file:
+                    fileName: "kubeconfig"
                     id: "kubeconfig-prodpublick8s"
                     description: "Kubeconfig file for prodpublick8s"
                     scope: GLOBAL
