--- a/config/ext_jenkins-infra.yaml
+++ b/config/ext_jenkins-infra.yaml
@@ -535,6 +535,7 @@ controller:
                 }
               }
           # List of MultiBranches, add your own as another map
+          # the internalId field is a human generated unique ID based on the current date
           - script: >
               [
                 [ name: 'Wiki Exporter', GHOrganization: 'jenkins-infra', repository: 'jenkins-wiki-exporter', internalId: '2021042801', jenkinsfilePath: 'Jenkinsfile'],
