--- a/config/ext_jenkins-infra.yaml
+++ b/config/ext_jenkins-infra.yaml
@@ -178,6 +178,11 @@ controller:
                     scope: GLOBAL
                     secretBytes: "${base64:${PRODUCTION_TERRAFORM_DIGITALOCEAN_BACKEND_CONFIG}}"
                 - file:
+                    fileName: "backend-config"
+                    id: "production-terraform-datadog-backend-config"
+                    scope: GLOBAL
+                    secretBytes: "${base64:${PRODUCTION_TERRAFORM_DATADOG_BACKEND_CONFIG}}"
+                - file:
                     fileName: "kubeconfig"
                     id: "kubeconfig-cik8s"
                     description: "Kubeconfig file for cik8s"
