--- a/config/ext_jenkins-infra.yaml
+++ b/config/ext_jenkins-infra.yaml
@@ -228,12 +228,12 @@ controller:
                 - string:
                     scope: GLOBAL
                     id: "datadog-api-key"
-                    secret: "${DATADOG_API_KEY}"
+                    secret: "${PRODUCTION_DATADOG_API_KEY}"
                     description: Datadog API key for infra.ci
                 - string:
                     scope: GLOBAL
                     id: "datadog-app-key"
-                    secret: "${DATADOG_APP_KEY}"
+                    secret: "${PRODUCTION_DATADOG_APP_KEY}"
                     description: Datadog application key for infra.ci
                 - string:
                     scope: GLOBAL
