--- a/clusters/doks.yaml
+++ b/clusters/doks.yaml
@@ -4,9 +4,21 @@ helmDefaults:
   timeout: 300
   wait: true
 repositories:
+  - name: datadog
+    url: https://helm.datadoghq.com
   - name: jenkins-infra
     url: https://jenkins-infra.github.io/helm-charts
 releases:
+  - name: datadog
+    namespace: datadog
+    chart: datadog/datadog
+    version: 2.28.11
+    timeout: 840 # Should be <= 14 min (because the job runs every 15 min)
+    values:
+      - "../config/ext_datadog.yaml.gotmpl"
+      - "../config/ext_doks-datadog.yaml"
+    secrets:
+      - "../secrets/config/datadog/secrets.yaml"
   - name: jenkins-agents
     namespace: jenkins-agents
     chart: jenkins-infra/jenkins-kubernetes-agents
