--- a/config/ext_jenkins-infra.yaml
+++ b/config/ext_jenkins-infra.yaml
@@ -259,7 +259,7 @@ controller:
                     scope: GLOBAL
                     id: "packer-azure-subscription-id"
                     secret: "${PACKER_AZURE_SUBSCRIPTION_ID}"
-                    description: Azure client secret value for the Service Principal "packer"
+                    description: Azure tenant id value for the Service Principal "packer"
                 - string:
                     scope: GLOBAL
                     description: Auth token to communicate with netlify
