feat(jenkins) set quiet period to zero as no need to wait between build schedulings
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/config/ext_jenkins-release.yaml
+++ b/config/ext_jenkins-release.yaml
@@ -614,6 +614,7 @@ controller:
             # Keep healthMetrics an empty list to ensure weather is disabled
             healthMetrics: []
         jenkins:
+          quietPeriod: 0 # No need to wait between build scheduling
           disabledAdministrativeMonitors:
             - "jenkins.security.QueueItemAuthenticatorMonitor"
   sidecars:
