chore: add a skip-ci label in complement of ci-skip for convenience

--- a/config/ext_jenkins-infra.yaml
+++ b/config/ext_jenkins-infra.yaml
@@ -484,7 +484,7 @@ controller:
                         }
                         gitHubExcludeArchivedRepositories()
                         pullRequestLabelsBlackListFilterTrait {
-                          labels('on-hold ci-skip')
+                          labels('on-hold ci-skip skip-ci')
                         }
                         // Select branches and tags to build based on these filters
                         headWildcardFilterWithPR {
@@ -575,7 +575,7 @@ controller:
                             pruneStaleBranchTrait()
                             gitHubTagDiscovery()
                             pullRequestLabelsBlackListFilterTrait {
-                              labels('on-hold ci-skip')
+                              labels('on-hold ci-skip skip-ci')
                             }
                             // Select branches and tags to build based on these filters
                             headWildcardFilterWithPR {
