chore(updatecli) cleanup updatecli manifest to fix errors and warnings
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/updatecli/updatecli.d/docker-images/datadog.yaml
+++ b/updatecli/updatecli.d/docker-images/datadog.yaml
@@ -19,6 +19,7 @@ sources:
     spec:
       image: "jenkinsciinfra/datadog"
       tag: "latest"
+      architecture: amd64
 
 # no condition to test docker image availability as we're using a digest from docker hub
 
