--- a/updatecli/updatecli.d/docker-images/404.yaml
+++ b/updatecli/updatecli.d/docker-images/404.yaml
@@ -29,6 +29,8 @@ conditions:
     kind: dockerImage
     spec:
       image: "jenkinsciinfra/404"
+      ## Tag from source
+      architecture: amd64
 
 targets:
   updatePrivateNginxIngress404Public:
