--- a/config/ext_jenkins-infra.yaml
+++ b/config/ext_jenkins-infra.yaml
@@ -546,6 +546,7 @@ controller:
                 [ name: 'Packer Images', GHOrganization: 'jenkins-infra', repository: 'packer-images', internalId: '2021090101', jenkinsfilePath: 'Jenkinsfile_k8s'],
                 [ name: 'Jenkins.io', GHOrganization: 'jenkins-infra', repository: 'jenkins.io', internalId: '2021122501', jenkinsfilePath: 'Jenkinsfile_k8s', allowUntrustedChanges: true],
                 [ name: 'Shared Tools', GHOrganization: 'jenkins-infra', repository: 'shared-tools', internalId: '2022021801', jenkinsfilePath: 'Jenkinsfile_k8s'],
+                [ name: 'Jenkins Is The Way', GHOrganization: 'jenkins-infra', repository: 'jenkins-is-the-way', internalId: '2022031501', jenkinsfilePath: 'Jenkinsfile_k8s', allowUntrustedChanges: true],
               ].each { config ->
                 multibranchPipelineJob(config.repository) {
                   displayName config.name
