--- a/PodTemplates.yaml
+++ b/PodTemplates.yaml
@@ -37,10 +37,10 @@ spec:
       name: "jnlp"
       resources:
         limits:
-          memory: "1512Mi"
-          cpu: "400m"
+          memory: "2048Mi"
+          cpu: "2"
         requests:
-          memory: "1512Mi"
-          cpu: "400m"
+          memory: "2048Mi"
+          cpu: "2"
       securityContext:
         privileged: false
