Revert "[updatecli] Bump jenkins-infra helmfile docker image" (updatecli to 0.21.0) (#2097)
* Revert "[updatecli] Bump jenkins-infra helmfile docker image (#2095)"

This reverts commit 9db9427c6873d35f549326008235ad8ec77d7256.

* chores: ensure that updatecli runs in the same image the rest of the pipeline

Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

* chore(pipeline) increase resources used by helmfile steps

Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/PodTemplates.yaml
+++ b/PodTemplates.yaml
@@ -32,15 +32,15 @@ spec:
                 values:
                   - highmemlinux
   containers:
-    - image: "jenkinsciinfra/helmfile:2.3.10"
+    - image: "jenkinsciinfra/helmfile:2.3.7"
       imagePullPolicy: "IfNotPresent"
       name: "jnlp"
       resources:
         limits:
-          memory: "1512Mi"
-          cpu: "400m"
+          memory: "2048Mi"
+          cpu: "2"
         requests:
-          memory: "1512Mi"
-          cpu: "400m"
+          memory: "2048Mi"
+          cpu: "2"
       securityContext:
         privileged: false
