--- a/config/ext_jenkins-infra.yaml
+++ b/config/ext_jenkins-infra.yaml
@@ -135,27 +135,29 @@ controller:
                     description: Algolia credentials to write data for plugin site
                 - string:
                     scope: GLOBAL
-                    id: "ci-terraform-aws-access-key"
+                    id: "staging-terraform-aws-access-key"
                     secret: "${STAGING_TERRAFORM_AWS_ACCESS_KEY_ID}"
-                    description: AWS access key id for the account 'ci-terraform'
+                    description: "AWS access key id for the staging terraform account for jenkins-infra/aws"
                 - string:
                     scope: GLOBAL
-                    id: "ci-terraform-aws-secret-key"
+                    id: "staging-terraform-aws-secret-key"
                     secret: "${STAGING_TERRAFORM_AWS_SECRET_ACCESS_KEY}"
-                    description: AWS secret key for the account 'ci-terraform'
+                    description: "AWS secret key for the staging terraform account for jenkins-infra/aws"
                 - file:
                     fileName: "backend-config"
-                    id: "ci-terraform-aws-backend-config"
+                    id: "staging-terraform-aws-backend-config"
+                    description: "Terraform backend configuration for the staging environment of jenkins-infra/aws"
                     scope: GLOBAL
                     secretBytes: "${base64:${STAGING_TERRAFORM_AWS_BACKEND_CONFIG}}"
                 - string:
                     scope: GLOBAL
-                    id: "ci-terraform-digitalocean-pat"
+                    id: "staging-terraform-digitalocean-pat"
                     secret: "${STAGING_TERRAFORM_DIGITALOCEAN_PAT}"
-                    description: Digital Ocean PAT for ci
+                    description: "Digital Ocean PAT for the staging environment of jenkins-infra/digitalocean"
                 - file:
                     fileName: "backend-config"
-                    id: "ci-terraform-digitalocean-backend-config"
+                    description: "Terraform backend configuration for the staging environment of jenkins-infra/digitalocean"
+                    id: "staging-terraform-digitalocean-backend-config"
                     scope: GLOBAL
                     secretBytes: "${base64:${STAGING_TERRAFORM_DIGITALOCEAN_BACKEND_CONFIG}}"
                 - string:
@@ -277,6 +279,7 @@ controller:
                 - file:
                     fileName: "backend-config"
                     id: "production-terraform-azure-backend-config"
+                    description: "Terraform backend configuration for the production environment of jenkins-infra/azure"
                     scope: GLOBAL
                     secretBytes: "${base64:${PRODUCTION_TERRAFORM_AZURE_BACKEND_CONFIG}}"
                 - azure:
@@ -291,6 +294,7 @@ controller:
                 - file:
                     fileName: "backend-config"
                     id: "staging-terraform-azure-backend-config"
+                    description: "Terraform backend configuration for the staging environment of jenkins-infra/azure"
                     scope: GLOBAL
                     secretBytes: "${base64:${STAGING_TERRAFORM_AZURE_BACKEND_CONFIG}}"
 
