--- a/clusters/doks.yaml
+++ b/clusters/doks.yaml
@@ -9,7 +9,15 @@ repositories:
   - name: jenkins-infra
     url: https://jenkins-infra.github.io/helm-charts
 releases:
+  - name: docker-registry-secrets
+    chart: jenkins-infra/docker-registry-secrets
+    version: 0.1.0
+    values:
+      - "../config/ext_docker-registry-secrets.yaml"
+    secrets:
+      - "../secrets/config/docker-registry-secrets/secrets.yaml"
   - name: datadog
+    dependsOn: ["docker-registry-secrets"]
     namespace: datadog
     chart: datadog/datadog
     version: 2.30.17
@@ -20,6 +28,7 @@ releases:
     secrets:
       - "../secrets/config/datadog/secrets.yaml"
   - name: jenkins-agents
+    dependsOn: ["docker-registry-secrets"]
     namespace: jenkins-agents
     chart: jenkins-infra/jenkins-kubernetes-agents
     version: 0.2.1
