--- a/clusters/cik8s.yaml
+++ b/clusters/cik8s.yaml
@@ -21,6 +21,7 @@ releases:
     secrets:
       - "../secrets/config/docker-registry-secrets/secrets.yaml"
   - name: datadog
+    dependsOn: ["docker-registry-secrets"]
     namespace: datadog
     chart: datadog/datadog
     version: 2.30.17
@@ -31,6 +32,7 @@ releases:
     secrets:
       - "../secrets/config/datadog/secrets.yaml"
   - name: jenkins-agents
+    dependsOn: ["docker-registry-secrets"]
     namespace: jenkins-agents
     chart: jenkins-infra/jenkins-kubernetes-agents
     version: 0.2.1
