--- a/clusters/cik8s.yaml
+++ b/clusters/cik8s.yaml
@@ -14,6 +14,7 @@ repositories:
     url: https://jenkins-infra.github.io/helm-charts
 releases:
   - name: docker-registry-secrets
+    namespace: default
     chart: jenkins-infra/docker-registry-secrets
     version: 0.1.0
     values:
