--- a/clusters/doks.yaml
+++ b/clusters/doks.yaml
@@ -10,6 +10,7 @@ repositories:
     url: https://jenkins-infra.github.io/helm-charts
 releases:
   - name: docker-registry-secrets
+    namespace: default
     chart: jenkins-infra/docker-registry-secrets
     version: 0.1.0
     values:
@@ -18,7 +19,7 @@ releases:
       - "../secrets/config/docker-registry-secrets/secrets.yaml"
   - name: datadog
     needs:
-      - docker-registry-secrets
+      - default/docker-registry-secrets
     namespace: datadog
     chart: datadog/datadog
     version: 2.30.17
@@ -30,7 +31,7 @@ releases:
       - "../secrets/config/datadog/secrets.yaml"
   - name: jenkins-agents
     needs:
-      - docker-registry-secrets
+      - default/docker-registry-secrets
     namespace: jenkins-agents
     chart: jenkins-infra/jenkins-kubernetes-agents
     version: 0.2.1
