--- a/config/ext_jenkins-infra.yaml
+++ b/config/ext_jenkins-infra.yaml
@@ -482,7 +482,7 @@ controller:
           - script: >
               [
                 [ name: 'Docker Builds', GHOrganization: 'jenkins-infra', repoPattern: 'rating|docker-.*$', jenkinsfilePath: 'Jenkinsfile_k8s'],
-                [ name: 'Terraform Jobs', GHOrganization: 'jenkins-infra', repoPattern: 'aws|azure|datadog|digitalocean$', jenkinsfilePath: 'Jenkinsfile_k8s'],
+                [ name: 'Terraform Jobs', GHOrganization: 'jenkins-infra', repoPattern: 'aws|azure|datadog|digitalocean|fastly$', jenkinsfilePath: 'Jenkinsfile_k8s'],
               ].each { config ->
                 organizationFolder(config.name) {
                   description(config.name)
