--- a/clusters/doks.yaml
+++ b/clusters/doks.yaml
@@ -9,7 +9,19 @@ repositories:
   - name: jenkins-infra
     url: https://jenkins-infra.github.io/helm-charts
 releases:
+  - name: docker-registry-secrets
+    #this helmchart doesn't create any resources within the namespace specified below.
+    #specifying a namespace is required by the "needs" feature of helmfile (to allow referencing to this release from others)
+    namespace: default
+    chart: jenkins-infra/docker-registry-secrets
+    version: 0.1.0
+    values:
+      - "../config/docker-registry-secrets.yaml"
+    secrets:
+      - "../secrets/config/docker-registry-secrets/secrets.yaml"
   - name: datadog
+    needs:
+      - default/docker-registry-secrets
     namespace: datadog
     chart: datadog/datadog
     version: 2.30.17
@@ -20,6 +32,8 @@ releases:
     secrets:
       - "../secrets/config/datadog/secrets.yaml"
   - name: jenkins-agents
+    needs:
+      - default/docker-registry-secrets
     namespace: jenkins-agents
     chart: jenkins-infra/jenkins-kubernetes-agents
     version: 0.2.1
