--- a/clusters/temp-privatek8s.yaml
+++ b/clusters/temp-privatek8s.yaml
@@ -25,7 +25,7 @@ releases:
     chart: jenkins-infra/acme
     version: 0.1.2
     needs:
-    - cert-manager
+      - cert-manager/cert-manager
     values:
       - "../config/acme.yaml"
     secrets:
@@ -46,16 +46,24 @@ releases:
     namespace: jenkins-infra
     chart: jenkins/jenkins
     version: 3.11.8
-    set:
-      - name: namespace
-        value: jenkins-infra
+    needs:
+      - jenkins-infra-additional # Required to allow the Jenkins controller to spawn kubernetes pods in the current cluster
+      - jenkins-jobs # Required to generate the job definition in a configmap
+      - public-nginx-ingress/public-nginx-ingress # Required to expose the webhooks endpoint (secondary ingress of the jenkins helm chart)
+      - private-nginx-ingress/private-nginx-ingress # Required to expose the Web UI to the VPN (primary ingress of the jenkins helm chart)
     values:
       - "../config/ext_jenkins-infra.yaml"
     secrets:
       - "../secrets/config/infra.ci.jenkins.io/jenkins-secrets.yaml"
+  - name: jenkins-jobs
+    namespace: jenkins-infra
+    chart: jenkins-infra/jenkins-jobs
+    version: 0.0.1
+    values:
+      - "../config/ext_jenkins-infra-jobs.yaml"
   - name: jenkins-infra-additional
     namespace: jenkins-infra
     chart: jenkins-infra/jenkins-additional
     version: 0.0.3
     values:
-    - ../config/jenkins-infra-additional.yaml
+      - ../config/jenkins-infra-additional.yaml
