--- a/config/ext_jenkins-infra.yaml
+++ b/config/ext_jenkins-infra.yaml
@@ -96,6 +96,16 @@ controller:
                     id: "ec2-agents-credentials"
                     scope: SYSTEM
                     secretKey: "${EC2_AWS_SECRET_ACCESS_KEY}"
+                - string:
+                    scope: GLOBAL
+                    id: "packer-aws-access-key-id"
+                    secret: "${CI_PACKER_AWS_ACCESS_KEY_ID}"
+                    description: AWS API key for the account ci-packer
+                - string:
+                    scope: GLOBAL
+                    id: "packer-aws-secret-access-key"
+                    secret: "${CI_PACKER_AWS_SECRET_ACCESS_KEY}"
+                    description: AWS Secret key for the account ci-packer
       agent-settings: |
         jenkins:
           numExecutors: 0
