--- a/clusters/prodpublick8s.yaml
+++ b/clusters/prodpublick8s.yaml
@@ -235,3 +235,15 @@ releases:
     version: 0.3.2
     values:
       - "../config/wiki.yaml"
+  # weekly.ci.jenkins.io
+  - name: jenkins-weekly
+    namespace: jenkins-weekly
+    chart: jenkins/jenkins
+    version: 3.11.8
+    needs:
+      - public-nginx-ingress/public-nginx-ingress # Required to expose the webhooks endpoint (secondary ingress of the jenkins helm chart)
+      - private-nginx-ingress/private-nginx-ingress # Required to expose the Web UI to the VPN (primary ingress of the jenkins helm chart)
+    values:
+      - "../config/ext_jenkins-weekly.yaml"
+    secrets:
+      - "../secrets/config/weekly.ci.jenkins.io/jenkins-secrets.yaml"
