fix: use dedicated github app

--- a/config/ext_jenkins-weekly.yaml
+++ b/config/ext_jenkins-weekly.yaml
@@ -120,7 +120,7 @@ controller:
                 modernSCM:
                   scm:
                     git:
-                      id: "github-app-infra"
+                      id: "github-app-weekly"
                       remote: "https://github.com/jenkins-infra/pipeline-library.git"
       matrix-settings: |
         jenkins:
