--- a/clusters/prodpublick8s.yaml
+++ b/clusters/prodpublick8s.yaml
@@ -241,7 +241,7 @@ releases:
     chart: jenkins/jenkins
     version: 3.11.8
     needs:
-      - public-nginx-ingress/public-nginx-ingress # Required to expose the webhooks endpoint (secondary ingress of the jenkins helm chart)
+      - public-nginx-ingress/public-nginx-ingress # Required to expose both the UI and the webhooks endpoint
     values:
       - "../config/ext_jenkins-weekly.yaml"
     secrets:
