no service account
Co-authored-by: Damien Duportal <damien.duportal@gmail.com>

--- a/config/ext_jenkins-weekly.yaml
+++ b/config/ext_jenkins-weekly.yaml
@@ -2,8 +2,7 @@ serviceAccount:
   create: true
   name: jenkins-controller
 serviceAccountAgent:
-  create: true
-  name: jenkins-agent
+  create: false
 rbac:
   create: true
   readSecrets: true
