remove wrong comment
Co-authored-by: Tim Jacomb <21194782+timja@users.noreply.github.com>

--- a/config/ext_jenkins-weekly.yaml
+++ b/config/ext_jenkins-weekly.yaml
@@ -62,7 +62,7 @@ controller:
                     scope: GLOBAL
       agent-settings: |
         jenkins:
-          numExecutors: 0 # Allow one build on controller for now
+          numExecutors: 0
           clouds: []
       ldap-settings: |
         jenkins:
